[package]
name = "kubelka"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
description = "An exploration of blending inspired by Kubelka-Munk theory"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.15.3"
